--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,10 +11,11 @@
 
 
 # MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://172.17.0.2:3306/employee_system
+spring.datasource.url=jdbc:mysql://172.17.0.2:3306/ems
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
